Revision history for Game-Theory-TwoPersonMatrix

{{$NEXT}}
    - Added tests for mixed().

0.04  2014-11-18
    - Re-added mixed() and Math::Calculus::* deps.

0.03  2014-08-30
    - Improved documentation.
    - Removed the broken dependency on the missing Math::Calculus::Expression module.

0.0201 2014-02-02
    - Enhanced documentation!

0.02  2014-02-02
    - Implemented optimal strategy equation computation via probabilities over
      combined opponent strategic utilities.

0.0101 2014-01-29
    - Improved documentation
    - Added tests for negative utilities

0.01  2014-01-28
    - Documented the thing!
    - Moved functionality from script subs to module methods
    - Minted by Dist::Zilla