@@ -2,6 +2,7 @@ Revision history for Game-Theory-TwoPersonMatrix
 
 {{$NEXT}}
     - Added tests for mixed().
+    - Added the player_strategy() method, tests and docs.
 
 0.04  2014-11-18
     - Re-added mixed() and Math::Calculus::* deps.
